fixed overflow of navbar

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body {
   top: 0;
   left: 0;
   height: 7rem;
+  overflow: hidden;
 }
 
 .nav-opt {
